--- a/.gitignore
+++ b/.gitignore
@@ -45,35 +45,39 @@ jspm_packages
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
+**/.idea/**
+
 # User-specific stuff:
-.idea/workspace.xml
-.idea/tasks.xml
-.idea/dictionaries
-.idea/vcs.xml
-.idea/jsLibraryMappings.xml
+**.idea/workspace.xml
+**.idea/tasks.xml
+**.idea/dictionaries
+**.idea/vcs.xml
+**.idea/jsLibraryMappings.xml
 
 # Sensitive or high-churn files:
-.idea/dataSources.ids
-.idea/dataSources.xml
-.idea/dataSources.local.xml
-.idea/sqlDataSources.xml
-.idea/dynamic.xml
-.idea/uiDesigner.xml
+**.idea/dataSources.ids
+**.idea/dataSources.xml
+**.idea/dataSources.local.xml
+**.idea/sqlDataSources.xml
+**.idea/dynamic.xml
+**.idea/uiDesigner.xml
 
 # Gradle:
-.idea/gradle.xml
-.idea/libraries
+**.idea/gradle.xml
+**.idea/libraries
 
 # Mongo Explorer plugin:
-.idea/mongoSettings.xml
+**.idea/mongoSettings.xml
 
 ## File-based project format:
-*.iws
+**.iws
 
 ## Plugin-specific files:
 
 # IntelliJ
 /out/
+
+**.iml
 
 # mpeltonen/sbt-idea plugin
 .idea_modules/
@@ -95,16 +99,16 @@ fabric.properties
 
 
 ### Java ###
-*.class
+**.class
 target/
 
 # Mobile Tools for Java (J2ME)
-.mtj.tmp/
+**.mtj.tmp/
 
 # Package Files #
-*.jar
-*.war
-*.ear
+**.jar
+**.war
+**.ear
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
