--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,13 @@
 # Created by https://www.gitignore.io/api/java,node,intellij
 
 ### Node ###
+
+**/dist/
+**/build/
+**/bower_components/
+**/node_modules/
+**/typings/
+
 # Logs
 logs
 *.log
