port mapping in gateway

--- a/kubernetes-yaml/product-service-deployment.yaml
+++ b/kubernetes-yaml/product-service-deployment.yaml
@@ -6,7 +6,7 @@ metadata:
     visualize: "true"
   name: product-service
 spec:
-  replicas: 3
+  replicas: 1
   template:
     metadata:
       labels:
@@ -17,6 +17,6 @@ spec:
         visualize: "true"
     spec:
       containers:
-      - image: plantshop/productservice:latest
+      - image: kubecloud/demo-itonk-grp3-product-service:v1
         name: product-service
   minReadySeconds: 120
