--- a/kubernetes-yaml/config-service-deployment.yaml
+++ b/kubernetes-yaml/config-service-deployment.yaml
@@ -17,6 +17,6 @@ spec:
         visualize: "true"
     spec:
       containers:
-      - image: plantshop/configservice:2.0
+      - image: kubecloud/demo-itonk-grp3-config-service:v1
         name: config-service
   minReadySeconds: 120
