--- a/kubernetes-yaml/gateway-service-deployment.yaml
+++ b/kubernetes-yaml/gateway-service-deployment.yaml
@@ -6,7 +6,7 @@ metadata:
     visualize: "true"
   name: gateway-ui
 spec:
-  replicas: 2
+  replicas: 1
   template:
     metadata:
       labels:
@@ -17,5 +17,5 @@ spec:
         visualize: "true"
     spec:
       containers:
-      - image: plantshop/gatewayservice:latest
+      - image: kubecloud/demo-itonk-grp3-api-gateway:v1
         name: gateway-ui
